fix: fix carousel

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   <script>
-    $(function () {
-      $('#toggleSlideShow').click(function (event) {
-        var option = event.target.checked ? "cycle" : "pause";
-        $("#productCarousel").carousel(option);
+    $( document ).ready(function() {
+      $(function () {
+        $('#toggleSlideShow').click(function (event) {
+          var option = event.target.checked ? { interval: 3000 } : "pause";
+          $("#productCarousel").carousel(option);
+        });
       });
     });
   </script>
